build/_deps/ffilesystem-src/include/ffilesystem.h

using pid_t = long;
typedef long pid_t;
std::string fs_canonical(std::string_view, const bool = false);
std::string fs_compiler();
bool fs_copy_file(std::string_view, std::string_view, bool);
bool fs_create_symlink(std::string_view, std::string_view);
bool fs_equivalent(std::string_view, std::string_view);
bool fs_is_removable(std::string_view);
bool fs_exists(std::string_view);
bool fs_lexists(std::string_view);
std::string fs_expanduser(std::string_view);
std::string fs_file_name(std::string_view);
std::uintmax_t fs_file_size(std::string_view);
std::string fs_get_cwd();
std::string fs_get_homedir();
std::string fs_get_owner_group(std::string_view);
std::string fs_get_owner_name(std::string_view);
std::string fs_get_permissions(std::string_view);
std::string fs_get_profile_dir();
std::string fs_get_shell();
std::string fs_get_tempdir();
std::string fs_get_terminal();
std::string fs_get_username();
std::uintmax_t fs_hard_link_count(std::string_view);
std::string fs_hostname();
bool fs_has_filename(std::string_view);
bool fs_is_absolute(std::string_view);
bool fs_is_empty(std::string_view);
bool fs_is_safe_name(std::string_view);
bool fs_is_symlink(std::string_view);
std::string::size_type fs_max_component(std::string_view);
bool fs_mkdir(std::string_view);
std::string fs_read_symlink(std::string_view);
std::string fs_realpath(std::string_view);
bool fs_remove(std::string_view);
bool fs_rename(std::string_view, std::string_view);
std::string fs_resolve(std::string_view, const bool = false);
bool fs_set_cwd(std::string_view);
bool fs_set_permissions(std::string_view, int, int, int);
std::uintmax_t fs_space_available(std::string_view);
std::uintmax_t fs_space_capacity(std::string_view);
std::size_t fs_get_blksize(std::string_view);
long fs_cpp_lang();
long fs_c_lang();
size_t fs_get_max_path();
long fs_get_max_open_files();
size_t fs_max_component(const char*);
bool fs_is_optimized();
pid_t fs_getpid();
unsigned long long fs_total_sys_memory();
unsigned long long fs_get_free_memory();
bool fs_is_admin();
bool fs_is_bsd();
bool fs_is_macos();
bool fs_is_linux();
bool fs_is_unix();
bool fs_is_windows();
int fs_is_wsl();
bool fs_is_mingw();
bool fs_is_clangcl();
bool fs_is_msvc();
bool fs_win32_long_paths_enabled();
bool fs_is_cygwin();
bool fs_is_rosetta();
bool fs_is_empty(const char*);
bool fs_is_safe_name(const char*);
size_t fs_realpath(const char*, char*, const size_t);
size_t fs_file_name(const char*, char*, const size_t);
bool fs_is_symlink(const char*);
bool fs_create_symlink(const char*, const char*);
size_t fs_read_symlink(const char*, char*, const size_t);
bool fs_mkdir(const char*);
bool fs_exists(const char*);
bool fs_lexists(const char*);
bool fs_is_removable(const char*);
bool fs_has_filename(const char* path);
bool fs_is_absolute(const char*);
bool fs_set_permissions(const char*, int, int, int);
size_t fs_get_permissions(const char*, char*, const size_t);
bool fs_remove(const char*);
bool fs_rename(const char*, const char*);
size_t fs_canonical(const char*, const bool, char*, const size_t);
size_t fs_resolve(const char*, const bool, char*, const size_t);
bool fs_equivalent(const char*, const char*);
bool fs_copy_file(const char*, const char*, bool);
size_t fs_get_cwd(char*, const size_t);
bool fs_set_cwd(const char*);
size_t fs_get_homedir(char*, const size_t);
size_t fs_get_profile_dir(char*, const size_t);
size_t fs_get_username(char*, const size_t);
size_t fs_get_owner_name(const char*, char*, const size_t);
size_t fs_get_owner_group(const char*, char*, const size_t);
size_t fs_get_tempdir(char*, const size_t);
size_t fs_expanduser(const char*, char*, const size_t);
uintmax_t fs_file_size(const char*);
uintmax_t fs_space_available(const char*);
uintmax_t fs_space_capacity(const char*);
size_t fs_get_blksize(const char*);
uintmax_t fs_hard_link_count(const char*);
size_t fs_compiler(char*, const size_t);
size_t fs_get_shell(char*, const size_t);
size_t fs_get_terminal(char*, const size_t);
size_t fs_hostname(char*, const size_t);