build/_deps/ffilesystem-src/src/fortran/filesystem.F90

module filesystem

use, intrinsic:: iso_c_binding
use, intrinsic:: iso_fortran_env, only: int64, compiler_version, stderr=>error_unit

implicit none
private
!! utility procedures
public :: get_homedir, get_profile_dir, get_username, hostname, &
 get_owner_name, get_owner_group, &
 canonical, resolve, realpath, fs_getpid, &
 get_cwd, set_cwd, which
public :: normal, expanduser, as_posix, as_windows, &
has_filename, &
fs_has_cfi, &
is_absolute, is_char_device, is_fifo, is_case_sensitive, is_dir, is_file, &
is_exe, is_executable_binary, is_other, &
is_prefix, is_subdir, &
is_appexec_alias, &
is_readable, is_writable, is_reserved, &
is_empty, &
is_symlink, read_symlink, create_symlink, &
is_removable, exists, lexists, &
join, &
long_paths_enabled, &
copy_file, mkdir, &
relative_to, proximate_to, &
hard_link_count, &
root, root_name, same_file, file_size, &
free_memory, total_sys_memory, &
space_available, space_capacity, get_blksize, &
file_name, parent, stem, suffix, with_suffix, &
absolute, &
assert_is_file, assert_is_dir, &
touch, get_modtime, set_modtime, &
remove, fs_rename, &
get_tempdir, &
set_permissions, get_permissions, &
backend, cpp_lang, c_lang, &
fs_lang, &
fs_is_optimized, filesep, pathsep, is_safe_name, &
is_admin, is_bsd, is_macos, is_rosetta, is_windows, is_cygwin, is_wsl, is_mingw, is_clangcl, is_msvc, is_linux, is_unix, &
max_path, max_component, get_max_open_files, &
exe_path, lib_path, compiler, compiler_c, get_shell, get_terminal, &
longname, shortname, getenv, setenv, getarg, &
is_alpha, filesystem_type, devnull, cpu_arch, &
to_cygpath, to_winpath, &
stdin_tty


!> CFI related enum and functions

enum, bind(C)
  enumerator :: cfi_ok = 0
  enumerator :: cfi_not_found = 0
  enumerator :: cfi_null_desc = -1
  enumerator :: cfi_bad_rank = -2
  enumerator :: cfi_bad_type = -3
  enumerator :: cfi_bad_out_len = -4
  enumerator :: cfi_truncated = -5
end enum

!> legacy function name make_absolute() is actually absolute()
interface make_absolute
  module procedure absolute
end interface


interface

logical(C_BOOL) function fs_is_optimized() bind(C)
!! ffilesystem is optimized for speed?
import C_BOOL
end function

logical(C_BOOL) function long_paths_enabled() bind(C, name="fs_win32_long_paths_enabled")
!! long paths enabled on Windows
import C_BOOL
end function

logical(C_BOOL) function stdin_tty() bind(C)
!! stdin is a terminal
import C_BOOL
end function

integer(C_LONG) function fs_lang() bind(C, name="fs_cpp_lang")
!! deprecated: use `cpp_lang` instead
import C_LONG
end function

integer(C_LONG) function c_lang() bind(C, name="fs_c_lang")
!! C level of macro `__STDC_VERSION__`
import C_LONG
end function

integer(C_LONG) function cpp_lang() bind(C, name="fs_cpp_lang")
!! C++ level of macro `__cplusplus`
import C_LONG
end function

logical(C_BOOL) function is_admin() bind(C, name="fs_is_admin")
!! user running as admin / root / superuser?
import
end function

logical(C_BOOL) function is_bsd() bind(C, name="fs_is_bsd")
!! operating system is BSD-like
import
end function

logical(C_BOOL) function is_macos() bind(C, name="fs_is_macos")
!! operating system is macOS
import
end function

logical(C_BOOL) function is_rosetta() bind(C, name="fs_is_rosetta")
!! running on Apple Silicon with Rosetta 2
import
end function

logical(C_BOOL) function is_windows() bind(C, name="fs_is_windows")
!! operating system is Microsoft Windows
import
end function

logical(C_BOOL) function is_cygwin() bind(C, name="fs_is_cygwin")
!! operating system is Cygwin
import
end function

integer(C_INT) function is_wsl() bind(C, name="fs_is_wsl")
!! Windows Subsystem for Linux (WSL) version (0 is not WSL)
import
end function

integer(C_LONG) function fs_getpid() bind(C)
!! process ID
import
end function

logical(C_BOOL) function is_mingw() bind(C, name="fs_is_mingw")
!! operating system platform is MinGW
import C_BOOL
end function

logical(C_BOOL) function is_clangcl() bind(C, name="fs_is_clangcl")
!! compiler is Clang-CL
import C_BOOL
end function

logical(C_BOOL) function is_msvc() bind(C, name="fs_is_msvc")
!! compiler is MSVC-like (including oneAPI on Windows with MSVC frontend)
import C_BOOL
end function


logical(C_BOOL) function is_linux() bind(C, name="fs_is_linux")
!! operating system is Linux
import C_BOOL
end function

logical(C_BOOL) function is_unix() bind(C, name="fs_is_unix")
!! operating system is Unix-like
import C_BOOL
end function

integer(C_SIZE_T) function fs_get_max_path() bind(c)
import
end function

integer(C_SIZE_T) function fs_max_component(path) bind(C)
import
character(kind=C_CHAR), intent(in) :: path(*)
end function
integer(C_LONG) function fs_get_max_open_files() bind(C)
import
end function

logical(C_BOOL) function fs_is_empty(path) bind(C)
import
character(kind=C_CHAR), intent(in) :: path(*)
end function

integer(C_SIZE_T) function fs_canonical(path, strict, result, buffer_size) bind(C)
import
character(kind=C_CHAR), intent(in) :: path(*)
logical(C_BOOL), intent(in), value :: strict
character(kind=C_CHAR), intent(out) :: result(*)
integer(C_SIZE_T), intent(in), value :: buffer_size
end function

#if defined HAVE_ISO_FORTRAN_BINDING
integer(C_INT) function realpath_cfi(path, result) bind(C)
import C_INT
character(*), intent(in)  :: path
character(*), intent(out) :: result
end function
#else
integer(C_SIZE_T) function fs_realpath(path, result, buffer_size) bind(C)
import
character(kind=C_CHAR), intent(in) :: path(*)
character(kind=C_CHAR), intent(out) :: result(*)
integer(C_SIZE_T), intent(in), value :: buffer_size
end function
#endif

integer(C_SIZE_T) function fs_resolve(path, strict, result, buffer_size) bind(C)
import
character(kind=C_CHAR), intent(in) :: path(*)
logical(C_BOOL), intent(in), value :: strict
character(kind=C_CHAR), intent(out) :: result(*)
integer(C_SIZE_T), intent(in), value :: buffer_size
end function

logical(C_BOOL) function fs_set_permissions(path, readable, writable, executable) bind(C)
import
character(kind=C_CHAR), intent(in) :: path(*)
integer(C_INT), intent(in), value :: readable, writable, executable
end function

integer(C_SIZE_T) function fs_get_permissions(path, perms, buffer_size) bind(C)
import
character(kind=C_CHAR), intent(in) :: path(*)
character(kind=C_CHAR), intent(out) :: perms(*)
integer(C_SIZE_T), intent(in), value :: buffer_size
end function

logical(C_BOOL) function fs_copy_file(source, dest, overwrite) bind(C)
import
character(kind=c_char), intent(in) :: source(*), dest(*)
logical(C_BOOL), intent(in), value :: overwrite
end function


logical(C_BOOL) function fs_equivalent(path1, path2) bind(C)
import C_BOOL, C_CHAR
character(kind=C_CHAR), intent(in) :: path1(*), path2(*)
end function

logical(C_BOOL) function fs_is_symlink(path) bind(C)
import
character(kind=C_CHAR), intent(in) :: path(*)
end function

integer(C_SIZE_T) function fs_compiler(path, buffer_size) bind(C)
import
character(kind=C_CHAR), intent(out) :: path(*)
integer(C_SIZE_T), intent(in), value :: buffer_size
end function

integer(C_SIZE_T) function fs_get_shell(path, buffer_size) bind(C)
import
character(kind=C_CHAR), intent(out) :: path(*)
integer(C_SIZE_T), intent(in), value :: buffer_size
end function

integer(C_SIZE_T) function fs_get_terminal(path, buffer_size) bind(C)
import
character(kind=C_CHAR), intent(out) :: path(*)
integer(C_SIZE_T), intent(in), value :: buffer_size
end function

integer(C_SIZE_T) function fs_read_symlink(path, result, buffer_size) bind(C)
import
character(kind=c_char), intent(in) :: path(*)
character(kind=c_char), intent(out) :: result(*)
integer(C_SIZE_T), intent(in), value :: buffer_size
end function

logical(C_BOOL) function fs_create_symlink(target, link) bind(C)
import
character(kind=C_CHAR), intent(in) :: target(*), link(*)
end function

logical(C_BOOL) function fs_mkdir(path) bind(C)
import
character(kind=C_CHAR), intent(in) :: path(*)
end function

logical(C_BOOL) function fs_remove(path) bind(C)
import
character(kind=C_CHAR), intent(in) :: path(*)
end function

logical (C_BOOL) function fs_rename_c(oldpath, newpath) bind(C, name="fs_rename")
import
character(kind=C_CHAR), intent(in) :: oldpath(*), newpath(*)
end function

logical(C_BOOL) function fs_exists(path) bind(C)
import
character(kind=C_CHAR), intent(in) :: path(*)
end function

logical(C_BOOL) function fs_lexists(path) bind(C)
import
character(kind=C_CHAR), intent(in) :: path(*)
end function

logical(C_BOOL) function fs_is_removable(path) bind(C)
import
character(kind=C_CHAR), intent(in) :: path(*)
end function

integer(C_SIZE_T) function fs_expanduser(path, result, buffer_size) bind(C)
import
character(kind=c_char), intent(in) :: path(*)
character(kind=c_char), intent(out) :: result(*)
integer(C_SIZE_T), intent(in), value :: buffer_size
end function

integer(C_SIZE_T) function fs_file_name(path, filename, buffer_size) bind(C)
import
character(kind=C_CHAR), intent(in) :: path(*)
character(kind=C_CHAR), intent(out) :: filename(*)
integer(C_SIZE_T), intent(in), value :: buffer_size
end function

logical(C_BOOL) function fs_is_safe_name(filename) bind(C)
import
character(kind=C_CHAR), intent(in) :: filename(*)
end function

integer(C_INTMAX_T) function fs_file_size(path) bind(C)
import
character(kind=C_CHAR), intent(in) :: path(*)
end function

integer(C_INTMAX_T) function fs_hard_link_count(path) bind(C)
import
character(kind=C_CHAR), intent(in) :: path(*)
end function

integer(C_LONG_LONG) function fs_get_free_memory() bind(C)
import
end function

integer(C_LONG_LONG) function fs_total_sys_memory() bind(C)
import
end function

integer(C_INTMAX_T) function fs_space_available(path) bind(C)
import
character(kind=C_CHAR), intent(in) :: path(*)
end function

integer (C_INTMAX_T) function fs_space_capacity(path) bind(C)
import
character(kind=C_CHAR), intent(in) :: path(*)
end function

integer(C_SIZE_T) function fs_get_blksize(path) bind(C)
import
character(kind=C_CHAR), intent(in) :: path(*)
end function

integer(C_SIZE_T) function fs_get_cwd(path, buffer_size) bind(C)
import
character(kind=C_CHAR), intent(out) :: path(*)
integer(C_SIZE_T), intent(in), value :: buffer_size
end function

logical(C_BOOL) function fs_set_cwd(path) bind(C)
import
character(kind=C_CHAR), intent(in) :: path(*)
end function

integer (C_SIZE_T) function fs_hostname(name, buffer_size) bind(C)
import
character(kind=C_CHAR), intent(out) :: name(*)
integer(C_SIZE_T), intent(in), value :: buffer_size
end function

integer (C_SIZE_T) function fs_get_username(name, buffer_size) bind(C)
import
character(kind=C_CHAR), intent(out) :: name(*)
integer(C_SIZE_T), intent(in), value :: buffer_size
end function

integer (C_SIZE_T) function fs_get_owner_name(path, name, buffer_size) bind(C)
import
character(kind=C_CHAR), intent(in) :: path(*)
character(kind=C_CHAR), intent(out) :: name(*)
integer(C_SIZE_T), intent(in), value :: buffer_size
end function

integer (C_SIZE_T) function fs_get_owner_group(path, name, buffer_size) bind(C)
import
character(kind=C_CHAR), intent(in) :: path(*)
character(kind=C_CHAR), intent(out) :: name(*)
integer(C_SIZE_T), intent(in), value :: buffer_size
end function

integer(C_SIZE_T) function fs_get_homedir(path, buffer_size) bind(C)
import
character(kind=c_char), intent(out) :: path(*)
integer(C_SIZE_T), intent(in), value :: buffer_size
end function

integer(C_SIZE_T) function fs_get_profile_dir(path, buffer_size) bind(C)
import
character(kind=c_char), intent(out) :: path(*)
integer(C_SIZE_T), intent(in), value :: buffer_size
end function

integer(C_SIZE_T) function fs_get_tempdir(path, buffer_size) bind(C)
import
character(kind=c_char), intent(out) :: path(*)
integer(C_SIZE_T), intent(in), value :: buffer_size
end function

logical(c_bool) function fs_has_filename(path) bind(C)
import
character(kind=C_CHAR), intent(in) :: path(*)
end function

logical(c_bool) function fs_is_absolute(path) bind(C)
import
character(kind=C_CHAR), intent(in) :: path(*)
end function
